# Project_Group7

./: CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILE_MANIFEST.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  app.py  logic.py  pyproject.toml  requirements.txt  stbar_app.py
src/: __init__.py  logging_config.py
src/agents/: medical_dosage_agent.py
src/memory/: __init__.py  persistent_memory.py
src/rag/: __init__.py  rag_pipeline.py
src/tools/: compute_dosage_tool.py
src/ui/: app.py
tests/: test_compute_dosage_tool.py  test_integration.py
