[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-dosage-agent"
version = "1.0.0"
description = "AI Agentic System for Medical Dosage Calculations - Systems for Niche Agentic Programming"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "SNAP Team", email = "team@example.com"}
]
keywords = ["ai", "agents", "medical", "dosage", "agentic-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.12",
    "google-generativeai>=0.3.0",
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
